@@ -1,3 +1,6 @@
+  01 Aug 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.5.ebuild:
+  [www-apps/redmine_git_hosting] Add ruby20 support.
+
   25 Jul 2014; Manuel Rüger <mrueg@gentoo.org>
   -redmine_git_hosting-0.7.4.ebuild, redmine_git_hosting-0.7.5.ebuild:
   [www-apps/redmine_git_hosting] Add sanity check for ruby versions during
